After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 155719 - Page setup settings not saved
Page setup settings not saved
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: import/export MS Excel (tm)
1.2.x
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-10-18 13:07 UTC by rebcoair
Modified: 2005-10-15 01:25 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description rebcoair 2004-10-18 13:07:22 UTC
Set a custom header or footer and save file as an excel xls type. When file is
reopened the header/footer has reverted to the default. Expected the saved
header/footer to be as saved.
Comment 1 Kjartan Maraas 2005-01-06 13:43:05 UTC
Confirming.
Comment 2 Jody Goldberg 2005-10-15 01:25:50 UTC
blah.  I implemented this on 2005/02/14 and forgot to close the bug.
patch is in 1.6.0