http://bugzilla.gnome.org/show_bug.cgi?id=155719 quick and easy

2005-01-14  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=155719
	* ms-excel-write.c (writer_header_footer) : quick and easy
	  implementation.